Add sentry, command and twig-extension

--- a/.env
+++ b/.env
@@ -17,3 +17,6 @@
 APP_ENV=dev
 APP_SECRET=d8eef3a172b97a5c2260457c71511a93
 ###< symfony/framework-bundle ###
+###> sentry/sentry-symfony ###
+SENTRY_DSN=
+###
