--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "knplabs/knp-markdown-bundle": "^1.10",
+        "paragonie/sodium_compat": "^1.17",
         "sensio/framework-extra-bundle": "^6.2",
         "sentry/sentry-symfony": "^4.2",
         "symfony/asset": "6.0.*",
@@ -75,6 +76,7 @@
     },
     "require-dev": {
         "symfony/debug-bundle": "6.0.*",
+        "symfony/maker-bundle": "^1.36",
         "symfony/stopwatch": "6.0.*",
         "symfony/web-profiler-bundle": "6.0.*"
     }
