--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "paragonie/sodium_compat": "^1.17",
         "sensio/framework-extra-bundle": "^6.2",
         "sentry/sentry-symfony": "^4.2",
+        "stof/doctrine-extensions-bundle": "^1.7",
         "symfony/asset": "6.0.*",
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
