--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     cache_system: cache.adapter.filesystem
+    app.path.product_images: /uploads/images/products
 
 services:
     # default configuration for services in *this* file
